--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,26 @@
 {
   "FileSettings": {
-    "UploadDirectory": "C:\\SnapPrintKiosk\\Uploads" // Path to your upload directory
+    "UploadDirectory": "C:\\SnapPrintKiosk\\Uploads"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "System": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
