--- a/snapprintweb.csproj
+++ b/snapprintweb.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.65" />
   </ItemGroup>
 
